--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,22 +1,26 @@
 <h1>Real Time Products</h1>
 <h2>Productos actualizados en tiempo real</h2>
-<div id="productsContainer"></div>
+<div id="productsContainer">
+
+</div>
 
 <h2>AGREGAR PRODUCTOS</h2>
-<form action="">
-    <input type="text" id="title" placeholder="Titulo">
-    <input type="text" id="description" placeholder="Descripción">
-    <input type="number" id="price" placeholder="Precio">
-    <input type="text" id="img" value="sin imagen">
-    <input type="text" id="code" placeholder="Codigo">
-    <input type="Number" id="stock" placeholder="Stock">
-    <input type="text" id="category" placeholder="Categoria">
-    <select name="" id="status">
-        <option value="true">Activo</option>
-        <option value="false">Inactivo</option>
-    </select>
-    <button type="button" id="btnEnviar">Enviar</button>
-</form>
+<div class="formContainer">
+    <form action="" class="formulario">
+        <input type="text" id="title" placeholder="Titulo">
+        <input type="text" id="description" placeholder="Descripción">
+        <input type="number" id="price" placeholder="Precio">
+        <input type="text" id="img" value="sin imagen">
+        <input type="text" id="code" placeholder="Codigo">
+        <input type="Number" id="stock" placeholder="Stock">
+        <input type="text" id="category" placeholder="Categoria">
+        <select name="" id="status">
+            <option value="true">Activo</option>
+            <option value="false">Inactivo</option>
+        </select>
+        <button type="button" id="btnEnviar">Enviar</button>
+    </form>
+</div>
 
 <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
 <script src="js/main.js"></script>
