--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,8 +1,22 @@
 <h1>Real Time Products</h1>
 <h2>Productos actualizados en tiempo real</h2>
-<div id="productsContainer">
 
-</div>
+    <div id="productsContainer">
+        {{#each products}}
+            <div class="card">
+                <p>{{this.title}}</p>
+                <p>{{this.description}}</p>
+                <p>{{this.price}}</p>
+                <p>{{this.thumbnail}}</p>
+                <p>{{this.code}}</p>
+                <p>{{this.stock}}</p>
+                <p>{{this.id}}</p>
+                <p>{{this.category}}</p>
+                <p>{{this._id}}</p>
+            </div>
+        {{/each}}
+    </div>
+
 
 <h2>AGREGAR PRODUCTOS</h2>
 <div class="formContainer">
