complete el paginate de products

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,6 +6,7 @@
             <p>{{this.title}}</p>
             <p>{{this.price}}</p>
             <p>{{this.thumbnail}}</p>
+            <p>{{this.category}}</p>
         </div>
     {{/each}}
 </div>
