falta resolver que cart no me muestra los campos del producto. el resto esta

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,6 +7,9 @@
             <p>{{this.price}}</p>
             <p>{{this.thumbnail}}</p>
             <p>{{this.category}}</p>
+            <div>
+                <button>Agregar al carrito</button>
+            </div>
         </div>
     {{/each}}
 </div>
