quite un texto de verificación que habia quedado

--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -4,9 +4,9 @@
     {{#each cart}}
     <div>
         <div class="card">
-            <h4>hola hola hola</h4>
-            <p>{{product.title}}</p>
-            <p>{{product.description}}</p>
+            <p>{{this.product}}</p>
+            <p>{{this.product.title}}</p>
+            <p>{{this.product.description}}</p>
             <p>Cantidad: {{quantity}}</p>
         </div>
     </div>
