--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,15 +1,25 @@
-<link rel="stylesheet" href="/css/style.css">
-<h3>Bienvenido! Inicia sesión para acceder a la tienda</h3>
-<div class="loginFormContainer">
-    <div>
-        <form action="/login" class="loginForm">
-            <label for="email">E-mail:</label><br>
-            <input type="email" id="email" name="email" placeholder="E-mail" required>
-            <input type="password" id="pass" name="password" placeholder="Contraseña" required>
-            <input type="submit" value="Iniciar sesión">
-        </form>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
-<script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
-<script src="/js/main.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <h3>Login</h3>
+    <form action="/api/users/login" method="post" class="registerForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <button type="submit">Ingresar</button>
+    </form>
+    <a href="/api/sessions/github">Iniciar sesión con GitHub</a>
+    <a href="/register">Registrarme</a>
+    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
+    <script src="/js/main.js"></script>
+</body>
+
+</html>
