--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -12,7 +12,7 @@
     <form action="/api/users/login" method="post" class="registerForm">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
+        <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" required>
         <button type="submit">Ingresar</button>
     </form>
