--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -10,17 +10,17 @@
 <body>
     <h3 class="registerForm">Register</h3>
     <form action="/api/users/register" method="post" class="registerForm">
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" required>
-        <label for="last_name">Last Name:</label>
+        <label for="first_name">Nombre:</label>
+        <input type="text" id="first_name" name="first_name">
+        <label for="last_name">Apellido:</label>
         <input type="text" id="last_name" name="last_name" required>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
+        <input type="email" id="email" name="email" placeholder="ejemplo@tienda.com"required>
+        <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" required>
-        <label for="age">Age:</label>
+        <label for="age">Edad:</label>
         <input type="number" id="age" name="age" required>
-        <button type="submit">Register</button>
+        <button type="submit">Registrarse</button>
     </form>
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script src="/js/main.js"></script>
