--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,15 @@
-body{
-    background-color: #0a0909;;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
 }
+
+h3 {
+    text-align: center;
+    margin-top: 20px;
+}
+
 h1,
 h2 {
     color: #d1cfcf;
@@ -80,22 +89,46 @@ h2 {
 /*estilos de chat*/
 
 .messageContainer{
-    max-height: 300px; /* Establece la altura máxima */
+    max-height: 300px; 
     max-width: 300px;
     overflow-y: auto; /* Habilita el desplazamiento vertical */
-    border: 1px solid #ccc; /* Borde para visualización */
-    padding: 10px; /* Espaciado interno */
+    border: 1px solid #ccc; 
+    padding: 10px; 
 
 }
 
 
 /*Estilos de Login y registro*/
 
-.registerForm {
-    align-items: baseline;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    color: antiquewhite;
-    width: 300px;
+.loginContainer {
+    margin-top: 20px;
+}
+
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+label, input, button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
