--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,5 @@
 <h1>Home</h1>
-
+<button onclick="window.location.href='/api/sessions/logout'">Cerrar sesión</button>
 <div id="productsContainer">
     {{#each products.docs}}
         <div class="card">
