--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,9 +1,21 @@
 body {
-    font-family: sans-serif;
-    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #282A35;
+}
+
+
+body, h2, p, input, button {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
+
+
 
 h3 {
     text-align: center;
@@ -16,8 +28,19 @@ h2 {
     text-align: center;
 }
 
+.headerContainer {
+    margin-left: 70px;
+    margin-right: 70px;
+    width: 95%;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #productsContainer {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -121,6 +144,19 @@ label, input, button {
     font-family:sans-serif;
 }
 
+.btn-social-login {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+}
+
 input {
     border: 1px solid #d4d1d3;
     border-radius: 7px;
@@ -129,15 +165,101 @@ input {
     font-size: 14px;
 }
 
-button {
-    background-color: #007BFF;
-    color: white;
-    padding: 10px;
-    border: none;
+
+
+
+
+
+/* estilos del contenedor*/
+.container {
+    background-color: #fff;
+    padding: 20px;
     border-radius: 5px;
-    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
 }
 
-button:hover {
-    background-color: #0056b3;
+/* estilos de formulario */
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.form-title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+}
+
+/* Estilo de grupo de formulario */
+.form-group {
+    margin-bottom: 15px;
+}
+
+
+.form-group label {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #666;
+}
+
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+/* estilo de botones */
+.btn {
+    max-width: 150px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4CAF50;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+.oauth-btn {
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border: 1px solid #d4d1d3;
+    border-radius: 7px;
+    background-color: transparent;
+    color:  #333;
+    font-weight: 550;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Redirect text styling */
+.redirect {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #666;
+    text-align: center;
+}
+
+.redirect a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.redirect a:hover {
+    text-decoration: underline;
 }
