--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,31 +1,34 @@
-<h1>Home</h1>
-<button onclick="window.location.href='/api/sessions/logout'">Cerrar sesión</button>
+<div class="headerContainer">
+    <h1>Home</h1>
+    <button onclick="window.location.href='/api/sessions/logout'" class="btn">Cerrar sesión</button>
+</div>
+
 <div id="productsContainer">
     {{#each products.docs}}
-        <div class="card">
-            <p>{{this.title}}</p>
-            <p>{{this.price}}</p>
-            <p>{{this.thumbnail}}</p>
-            <p>{{this.category}}</p>
-            <div>
-                <button>Agregar al carrito</button>
-            </div>
+    <div class="card">
+        <p>{{this.title}}</p>
+        <p>{{this.price}}</p>
+        <p>{{this.thumbnail}}</p>
+        <p>{{this.category}}</p>
+        <div>
+            <button class="btn">Agregar al carrito</button>
         </div>
+    </div>
     {{/each}}
 </div>
 
-<!-- Agregar botones de paginación -->
-{{#if products.hasPrevPage}}
+<div>
+    {{#if products.hasPrevPage}}
     <a href="?page={{products.prevPage}}">PrevPage</a>
-{{/if}}
+    {{/if}}
 
-{{#each products.pagesInRange}}
+    {{#each products.pagesInRange}}
     <a href="?page={{this}}">{{this}}</a>
-{{/each}}
+    {{/each}}
 
-{{#if products.hasNextPage}}
+    {{#if products.hasNextPage}}
     <a href="?page={{products.nextPage}}">NextPage</a>
-{{/if}}
-
+    {{/if}}
+</div>
 <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
 <script src="js/main.js"></script>
