--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,28 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="loginContainer">
-        <form action="/api/users/login" method="post" class="registerForm">
-            <h3>Login</h3>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Ingresar</button>
-            <button onclick="window.location.href='/api/sessions/github'">Ingresar con GitHub</button>
-            <button onclick="window.location.href='/api/sessions/google'">Ingresar con Google</button>
-            <button onclick="window.location.href='/register'">Registrarme</button>
+    <div>
+        <form action="/api/users/login" method="POST" class="form">
+            <h2 class="form-title">Iniciar sesión</h2>
+            <div class="btn-social-login">
+                <button type="button" class="oauth-btn" onclick="window.location.href='/api/sessions/github'">Ingresar
+                    con
+                    GitHub</button>
+                <button type="button" class="oauth-btn" onclick="window.location.href='/api/sessions/google'">Ingresar
+                    con
+                    Google</button>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="btn-container">
+                <button type="submit" class="btn">Ingresar</button>
+            </div>
+            <p class="redirect">¿No tenés una cuenta? <a href="/register">Registrate</a></p>
         </form>
     </div>
-
-
-    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
-    <script src="/js/main.js"></script>
 </body>
 
 </html>
