cree la ruta current, modifique el modelo de usuario y las estrategias para login con github y goggle adaptandolas a la nueva estructura de userModel. Cree la vista profile, para rederizar los datos obtenidos en la ruta current

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/api/users/register" method="post" class="registerForm">
+    <form action="/api/users/register" method="post" class="form">
         <h3 class="registerForm">¡Registrate!</h3>
         <label for="first_name">Nombre:</label>
         <input type="text" id="first_name" name="first_name">
