--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,12 +6,13 @@
 <div id="productsContainer">
     {{#each products.docs}}
     <div class="card">
+        <img src="{{this.product.thumbnail.[0]}}" alt="{{this.product.title}}" class="product-image">
         <p>{{this.title}}</p>
-        <p>{{this.price}}</p>
-        <p>{{this.thumbnail}}</p>
+        <p>$ {{this.price}}</p>
         <p>{{this.category}}</p>
         <div>
-            <button class="btn" onclick="/api/carts/{{../user.cart._id}}/product/{{this._id}}">Agregar al carrito</button>
+            <button class="btn" onclick="/api/carts/{{../user.cart._id}}/product/{{this._id}}">Agregar al
+                carrito</button>
         </div>
     </div>
     {{/each}}
@@ -19,7 +20,7 @@
 
 <div>
     {{#if products.hasPrevPage}}
-    <a href="?page={{products.prevPage}}">PrevPage</a>
+    <a href="?page={{products.prevPage}}">Aterior</a>
     {{/if}}
 
     {{#each products.pagesInRange}}
